--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 	<artifactId>hw3-kuol</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<scm>
-		<connection>scm:git:git@github.com:kuoliu/hw2-kuol.git</connection>
+		<connection>scm:git:git@github.com:kuoliu/hw3-kuol.git</connection>
 		<developerConnection>
-			scm:git:git@github.com:kuoliu/hw2-kuol.git
+			scm:git:git@github.com:kuoliu/hw3-kuol.git
 		</developerConnection>
 	</scm>
 	<repositories>
@@ -79,6 +79,16 @@
 		<dependency>
 			<groupId>org.apache.uima</groupId>
 			<artifactId>uimaj-as-jms</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cleartk</groupId>
+			<artifactId>cleartk-stanford-corenlp</artifactId>
+			<version>0.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.uima</groupId>
+			<artifactId>uimaj-as-activemq</artifactId>
 			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
