--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.11791.f13.hw3</groupId>
 	<artifactId>hw3-kuol</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:git@github.com:kuoliu/hw3-kuol.git</connection>
 		<developerConnection>
